--- a/redirect.html
+++ b/redirect.html
@@ -1,3 +1,8 @@
+<!-- This website is used for testing -->
+<!-- What this website can do is to redirect to the link in the URL parameter
+
+ -->
+
 <!DOCTYPE html>
 <html>
 <head>
