--- a/redirect.html
+++ b/redirect.html
@@ -11,7 +11,6 @@
     <meta name="robots" content="noindex, nofollow" />
 </head>
 <script>
-    const url = window.location.search;
-    window.location.replace(url);
+    window.location.href = window.location.search;
 </script>
 </html>
