--- a/redirect.html
+++ b/redirect.html
@@ -11,6 +11,8 @@
     <meta name="robots" content="noindex, nofollow" />
 </head>
 <script>
-    window.location.href = window.location.search;
+    window.onload = function() {
+        window.location.replace(window.location.search);
+    };
 </script>
 </html>
