--- a/redirect.html
+++ b/redirect.html
@@ -10,14 +10,13 @@
     <title>Redirecting...</title>
     <script>
         window.onload = function() {
-            var urlParams = new URLSearchParams(window.location.search);
-            var targetUrl = urlParams.get('b');
-            if (targetUrl) {
+            var url = window.location.href;
+            var index = url.indexOf('?');
+            if (index !== -1) {
+                var targetUrl = url.substring(index + 1);
                 window.location.href = targetUrl;
-            } else {
-                alert("Target URL is not specified.");
-            }
-        };
+            };
+        }
     </script>
 </head>
 <body>
